Edited wiki page Developers through web user interface.

--- a/wiki/Developers.wiki
+++ b/wiki/Developers.wiki
@@ -1,4 +1,5 @@
 #summary Information for developers of mobileterminal
+#labels Featured,Phase-Implementation
 
 = Introduction =
 
@@ -34,5 +35,3 @@ Running MobileTerminal on the device from inside XCode copies it to <b>~/Applica
 The simplest way to run MobileTerminal is to copy the build output (such as <b>build/Debug-iphoneos/Terminal.app</b>) directly to the <b>/Applications/</b>.  Typically you have to use scp or some other file transfer mechanishm.
 
 TODO(allen): We need some instructions for building .deb packages.
-
-
