Edited wiki page Issues through web user interface.

--- a/wiki/Issues.wiki
+++ b/wiki/Issues.wiki
@@ -2,4 +2,6 @@
 
 The popular package management system Cydia currently contains a version of mobileterminal that is known to not work in newer versions of iOS.  See the Downloads section for newer binaries and check out the [http://code.google.com/p/mobileterminal/wiki/Installation Installation] wiki for details on how to install if you need assistance.  Please do not file bug reports about older binaries.
 
+If you aren't sure what to do, then ask a question in the Google Group, or read the archives, instead of filing a bug report.  http://groups.google.com/group/mobileterminal
+
 Continue on to the [http://code.google.com/p/mobileterminal/issues/list full list of issues]
