--- a/wiki/Issues.wiki
+++ b/wiki/Issues.wiki
@@ -1,7 +1,9 @@
 #summary Details about filing Issues
 
-The popular package management system Cydia currently contains a version of mobileterminal that is known to not work in newer versions of iOS.  See the Downloads section for newer binaries and check out the [http://code.google.com/p/mobileterminal/wiki/Installation Installation] wiki for details on how to install if you need assistance.  Please do not file bug reports about older binaries.
+The popular package management system Cydia currently contains a version of mobileterminal that is known to not work in newer versions of iOS.  Please do not file bug reports about older binaries.  <font color=red>If you got an older binary somewhere, tell the maintainer of the repository to update to a newer binary. </font> MobileTerminal binaries are only distributed through the Downloads section of this site.
+
+See the Downloads section for newer binaries and check out the [http://code.google.com/p/mobileterminal/wiki/Installation Installation] wiki for details on how to install if you need assistance.
 
 If you aren't sure what to do, then ask a question in the Google Group, or read the archives, instead of filing a bug report.  http://groups.google.com/group/mobileterminal
 
-Continue on to the [http://code.google.com/p/mobileterminal/issues/list full list of issues]
+Having read the above, feel free to continue on to the [http://code.google.com/p/mobileterminal/issues/list full list of issues].
