--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -12,14 +12,18 @@ The older versions of MobileTerminal (less than v520) already on Cydia doesn't w
   # Download the latest `*`.deb file [http://mobileterminal.googlecode.com/files/MobileTerminal_520-1_iphoneos-arm.deb here]
   # Download and install on your Mac the latest version of [http://cyberduck.ch/ Cyberduck]
   # Make sure your Mac and iDevice both have a Wi-Fi connection on the same network
-  # On your iDevice, open Settings: General: Wi-Fi, tap the blue right-arrow on your connected network, and note the IP Address
+  # On your iDevice, open (for iOS 4.x) Settings: General: Wi-Fi or (for iOS 6.x) Settings: Wi-Fi, tap the right-arrow on your connected network, and note the IP Address
   # Open Cyberduck on your Mac, select Open Connection, and select “SFTP (SSH File Transfer Protocol)”
   # Enter the iDevice’s IP Address into “Server,” with Username “root” and your password (the default password is “alpine”), and press Connect {_NB: It will take some time to make the initial connection_}
-  # Navigate to /private/var/root/Media/Cydia/AutoInstall {_NB: If the AutoInstall folder does not exist, create it, paying attention to the capitals A and I_}
+
+••• If you have jailbroken your iDevice and NOT changed the default 'root' and 'mobile' passwords yet, you are asking to be hacked! •••
+
+  # Navigate to /private/var/root/Media/Cydia/AutoInstall {_NB: If the AutoInstall folder does not exist, create it, paying attention to the capital letters A and I_}
   # Drag the MobileTerminal .deb file from your Mac into the AutoInstall folder
   # Quit Cyberduck and reboot the iDevice
 
 _NB: If, after rebooting, MobileTerminal does not appear on your Springboard, respring (not reboot) the iDevice_
+
 
 === For Windows users: ===
 
